# taller1-worms

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  mapita.yaml  tutorial_instalacion.txt
Client/: CMakeLists.txt  main.cpp
Client/src/: CMakeLists.txt
Client/src/Action/: Action.cpp  Action.h  ActionHeaders.h
Client/src/Action/ChangeWeapon/: ChangeWeapon.cpp  ChangeWeapon.h
Client/src/Action/Jump/: Jump.cpp  Jump.h
Client/src/Action/Message/: Message.cpp  Message.h
Client/src/Action/Move/: Move.cpp  Move.h
Client/src/Action/Null/: NullAction.cpp  NullAction.h
Client/src/Action/Shoot/: Shoot.cpp  Shoot.h
Client/src/Action/Stop/: Stop.cpp  Stop.h
Client/src/Box2D/: box2dManager.cpp  box2dManager.h
Client/src/Box2D/include/box2d/: b2_body.h  b2_chain_shape.h  b2_collision.h  b2_world.h
Client/src/Client/: Client.cpp  Client.h
Client/src/ClientParser/: ClientParser.cpp  ClientParser.h
Client/src/ClientProtocol/: ClientProtocol.cpp  ClientProtocol.h  ClientProtocol_primitives.cpp
Client/src/ClientReceiverThread/: ClientReceiverThread.cpp  ClientReceiverThread.h
Client/src/ClientSenderThread/: ClientSenderThread.cpp  ClientSenderThread.h
Client/src/DataLoggin/: DataLoggin.cpp  DataLoggin.h
Client/src/Event/: Event.h  EventHeaders.h
Client/src/Event/MapUpdate/: MapUpdate.cpp  MapUpdate.h
Client/src/Event/NullEvent/: NullEvent.cpp  NullEvent.h
Client/src/Event/PlayerConnectedEvent/: PlayerConnectedEvent.cpp  PlayerConnectedEvent.h
Client/src/Event/PlayerDisconnectedEvent/: PlayerDisconnectedEvent.cpp  PlayerDisconnectedEvent.h
Client/src/Event/PlayerMessageEvent/: PlayerMessageEvent.cpp  PlayerMessageEvent.h
Client/src/Event/PlayerPosition/: PlayerPosition.cpp  PlayerPosition.h
Client/src/Event/ProyectileUpdate/: ProyectileUpdate.cpp  ProyectileUpdate.h
Client/src/Event/Timer/: Timer.cpp  Timer.h
Client/src/Event/TurnUpdate/: TurnUpdate.cpp  TurnUpdate.h
Client/src/EventProcessor/: EventProcessor.cpp  EventProcessor.h
Client/src/GameProcessing/: GameProcessing.cpp  GameProcessing.h
Client/src/Launcher/: CMakeCache.txt  CMakeLists.txt  CreateGame.cpp  CreateGame.h  Greeter.cpp  Greeter.h  JoinGame.cpp  JoinGame.h  Launcher.cpp  Launcher.h  Makefile  cmake_install.cmake  main.cpp  qtLauncher  step-3  ui_crear_partida_nueva.h  ui_create_map.h  ui_launcher.h  ui_start_game.h  ui_super_duper_tuki.h  ui_unirse_a_partida.h
Client/src/Launcher/DataLoggin/: DataLoggin.h
Client/src/Launcher/Forms/: crear_partida_nueva.ui  create_map.ui  launcher.ui  start_game.ui
Client/src/Launcher/Headers/: CreateGame.h  CreateMap.h  Greeter.h  JoinGame.h  StartGame.h
Client/src/Launcher/Sources/: CreateGame.cpp  CreateMap.cpp  Greeter.cpp  JoinGame.cpp  StartGame.cpp  main.cpp
Client/src/Launcher/ui/: crear_partida_nueva.ui  super_duper_tuki.ui  unirse_a_partida.ui
Client/src/SdlManager/: .gitignore  CMakeLists.txt  Editor.cpp  Editor.h  SdlCamera.cpp  SdlCamera.h  SdlManager.cpp  SdlManager.h  SdlMap.cpp  SdlMap.h  SdlResizableRect.cpp  SdlResizableRect.h  SdlSoundManager.cpp  SdlSoundManager.h  SdlTexturesManager.cpp  SdlTexturesManager.h  SdlWorm.cpp  SdlWorm.h  SdlWormState.h  SdlWormStateAirStrike.cpp  SdlWormStateAirStrike.h  SdlWormStateBanana.cpp  SdlWormStateBanana.h  SdlWormStateBazooka.cpp  SdlWormStateBazooka.h  SdlWormStateBeisboll.cpp  SdlWormStateBeisboll.h  SdlWormStateDynamite.cpp  SdlWormStateDynamite.h  SdlWormStateFalling.cpp  SdlWormStateFalling.h  SdlWormStateGreenGrenade.cpp  SdlWormStateGreenGrenade.h  SdlWormStateHolyGrenade.cpp  SdlWormStateHolyGrenade.h  SdlWormStateMortar.cpp  SdlWormStateMortar.h  SdlWormStateRedGrenade.cpp  SdlWormStateRedGrenade.h  SdlWormStateStill.cpp  (+9 more)
Client/src/SdlManager/SDL2pp/: Makefile  cmake_install.cmake  libSDL2pp.so.8
Client/src/SdlManager/SDL2pp/SDL2pp/: Config.hh
Client/src/SdlManager/SDL2pp/tests/: CMakeLists.txt
Client/src/SdlManager/projectiles/: SdlAirStrikeProjectile.cpp  SdlAirStrikeProjectile.h  SdlBananaProjectile.cpp  SdlBananaProjectile.h  SdlBazookaProjectile.cpp  SdlBazookaProjectile.h  SdlDynamiteProjectile.cpp  SdlDynamiteProjectile.h  SdlGreenGrenadeProjectile.cpp  SdlGreenGrenadeProjectile.h  SdlHolyGrenadeProjectile.cpp  SdlHolyGrenadeProjectile.h  SdlMortarProjectile.cpp  SdlMortarProjectile.h  SdlProjectile.cpp  SdlProjectile.h  SdlRedGrenadeProjectile.cpp  SdlRedGrenadeProjectile.h  common_projectiles.h
Client/src/SdlManager/states/: SdlWormState.cpp  SdlWormState.h  SdlWormStateAirStrike.cpp  SdlWormStateAirStrike.h  SdlWormStateBanana.cpp  SdlWormStateBanana.h  SdlWormStateBazooka.cpp  SdlWormStateBazooka.h  SdlWormStateBeisboll.cpp  SdlWormStateBeisboll.h  SdlWormStateDie.cpp  SdlWormStateDie.h  SdlWormStateDynamite.cpp  SdlWormStateDynamite.h  SdlWormStateFalling.cpp  SdlWormStateGreenGrenade.cpp  SdlWormStateGreenGrenade.h  SdlWormStateHolyGrenade.cpp  SdlWormStateHolyGrenade.h  SdlWormStateMortar.cpp  SdlWormStateMortar.h  SdlWormStateRedGrenade.cpp  SdlWormStateRedGrenade.h  SdlWormStateTeleport.cpp  SdlWormStateTeleport.h  common_states.h
Client/src/SdlManager/texture_sound_manager/: SdlMapTexturesManager.cpp  SdlMapTexturesManager.h  SdlProjectilesTextureManager.cpp  SdlProjectilesTextureManager.h  SdlSoundManager.cpp  SdlSoundManager.h  SdlWormTextureManager.cpp  SdlWormTextureManager.h
Common/: CMakeLists.txt  CommonConfigurationParser.cpp  CommonConfigurationParser.h  NetworkProtocol.h  Point.cpp  Point.h  Vect2D.cpp  Vect2D.h  WeaponDTO.cpp  WeaponDTO.h  Worm.cpp  Worm.h
Common/Socket/: Socket.cpp  (+2 more)
Documentacion/: DocumentacionTecnica.md  ManualDeProyecto.md  ManualDeUsuario.md
Images/: .gitignore
Maps/: mapita.yaml  mapita2.yaml
Server/: main.cpp
client/: ServerUpdate.cpp  ServerUpdate.h
common/: NetworkProtocol.h  thread.h
config/: Box2DConfig.yaml  ServerConfig.yaml  WeaponsConfig.yaml  WormConfig.yaml
docs/: DocStandards.md
maps/: mapita.txt  mapita.yaml
server/: AccepterThread.h  ClientUpdate.cpp  ClientUpdate.h  Game.cpp  Game.h  PlayerHandler.h  ReceiverThread.cpp  ServerProtocol.cpp  main.cpp
(+395 files in other folders)
